<resources>
    <string name="app_name">first-aplication</string>
    <string name="distancia">Distância</string>
    <string name="total_de_quilometros">Total de quilometros</string>
    <string name="preco">Preço</string>
    <string name="preco_por_litro">Preço por litro</string>
    <string name="autonomia">Autonomia</string>
    <string name="kms_por_litro">Kms/L</string>
    <string name="gasto_total">Seu gasto total será de</string>
</resources>